# winapi-rs

./: Cargo.toml
lib/esent/: Cargo.toml  README.md
lib/esent/src/: lib.rs
lib/ole32/src/: lib.rs
src/: esent.rs  lib.rs  winbase.rs  winnt.rs
src/shared/: minwindef.rs  windef.rs  winnt.rs
src/vc/: excpt.rs
